Middle sidebar css - fix spacing

--- a/docroot/sites/default/themes/maxim_base/css/global.css
+++ b/docroot/sites/default/themes/maxim_base/css/global.css
@@ -172,7 +172,7 @@ h1,h2,h3,h4,h5,h6,.field-name-field-channel a,h1#page-title,.item-list .pager
 #region-sidebar-first .more-link { text-align:center; margin-bottom:10px; }
 #region-sidebar-first .more-link a { font-size:1.3em; color:#0074A4; line-height:1em; }
 #region-sidebar-first .block-home-page-todays-girl .block-inner { margin-bottom:0; }
-#region-sidebar-first .block-home-page-buzz-of-the-day .block-inner { border-top:0; }
+#region-sidebar-first .block-home-page-buzz-of-the-day .block-inner { border-top:0; padding-top:0; }
 
 /* middle sidebar - reviews */
 #region-sidebar-first .block-home-page-reviews .block-inner { background: #FEEEE8; border-color: #BE4C1E; }
